# AgentMessage3.0

./: .gitignore  Makefile  docker-compose.yml  flowchart.md  history  history2  mcp_xmtp_server.sh  test.md
conflux/: config.toml
contracts/: IdentityRegistry.sol  Marketplace.sol
hardhat/: contract_address.txt  hardhat.config.js  marketplace_address.txt  package.json
hardhat/scripts/: deploy.js  deploy_marketplace.js
mcp/: Dockerfile  pyproject.toml
mcp/.data/: agents.json
mcp/conflux_mcp_demo/: agent.py  cli.py  contract.py  server.py  waku_client.py
mcp_xmtp/: .env.example  README.md  mcp-xmtp.postman_collection.json  package.json  tsconfig.json
mcp_xmtp/src/: agent.ts  cli.ts  contract.ts  funding.ts  mcp-adapter-fixed.mjs  server.ts  types.ts  xmtp-client.ts
scripts/: indexer_marketplace.py  indexer_registered.py
