[build-system]
requires = ["setuptools>=64", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "conflux-mcp-demo"
version = "0.1.0"
description = "Conflux MCP Demo with FastAPI and Waku v2 integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
  "web3>=6.20.1",
  "requests>=2.32.3",
  "pynacl>=1.5.0",
  "conflux-web3>=1.2.0",
  "cfx-account>=0.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "httpx>=0.27.0", "black>=24.4.2", "ruff>=0.4.7"]

[project.scripts]
conflux-mcp-demo = "conflux_mcp_demo.cli:main"